tests/invalid_ast_samples/b342ea89f9e8d4e54ac09e1752bfa6f35d69a0788e7831bd2f5e2f238755d2f2.py
from ast import Expr
from ast import FormattedValue
from ast import Load
from ast import Module
from ast import Name

tree = Module(
    body=[
        Expr(
            value=FormattedValue(
                value=Name(id="name_0", ctx=Load()), conversion=-1, format_spec=None
            )
        )
    ],
    type_ignores=[],
)

# version: 3.8.16
#
#
# Error:
#     AttributeError("'FormattedValue' object has no attribute 'values'")
